--- a/app/src/main/res/layout/lqscan.xml
+++ b/app/src/main/res/layout/lqscan.xml
@@ -7,11 +7,8 @@
         android:orientation="vertical"
         android:padding="16dp">
 
-        <!-- Buttons -->
-
-        <!-- Text Fields for Quantities in One Row -->
         <LinearLayout
-            android:layout_width="355dp"
+            android:layout_width="565dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:layout_marginBottom="20dp"
@@ -33,6 +30,14 @@
                 android:layout_marginEnd="16dp"
                 android:background="#FFC107"
                 android:text="Clear" />
+
+            <Button
+                android:id="@+id/btnToggleLog"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="16dp"
+                android:background="#AAAAA9"
+                android:text="Ẩn LOG" />
 
             <Button
                 android:id="@+id/btnExit"
