--- a/app/src/main/res/layout/lqscan.xml
+++ b/app/src/main/res/layout/lqscan.xml
@@ -8,9 +8,8 @@
         android:padding="16dp">
 
 
-
         <LinearLayout
-            android:layout_width="665dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:layout_marginBottom="20dp"
@@ -19,44 +18,49 @@
 
             <Button
                 android:id="@+id/btnconfig"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:layout_weight="1"
                 android:background="#5782FF"
-                android:layout_marginEnd="16dp"
+                android:layout_marginEnd="8dp"
                 android:text="Cấu hình tham số" />
 
             <Button
                 android:id="@+id/btnStart"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:layout_weight="1"
                 android:background="#4CAF50"
-
+                android:layout_marginEnd="8dp"
                 android:text="Kết nối đầu quét" />
 
             <Button
                 android:id="@+id/btnClear"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
-                android:layout_marginEnd="16dp"
+                android:layout_weight="1"
                 android:background="#FFC107"
+                android:layout_marginEnd="8dp"
                 android:text="Clear" />
 
             <Button
                 android:id="@+id/btnToggleLog"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="16dp"
+                android:layout_weight="1"
                 android:background="#AAAAA9"
+                android:layout_marginEnd="8dp"
                 android:text="Ẩn LOG" />
 
             <Button
                 android:id="@+id/btnExit"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:layout_weight="1"
                 android:background="#FF0000"
                 android:text="Thoát" />
         </LinearLayout>
+
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -141,7 +145,9 @@
                 android:gravity="top"
                 android:overScrollMode="always"
                 android:scrollbars="vertical"
-                android:singleLine="false" />
+                android:singleLine="false"
+                android:enabled="false"
+                android:focusable="false" />
 
             <EditText
                 android:id="@+id/lqetResultLog"
@@ -153,7 +159,10 @@
                 android:gravity="top"
                 android:overScrollMode="always"
                 android:scrollbars="vertical"
-                android:singleLine="false" />
+                android:singleLine="false"
+                android:enabled="false"
+                android:focusable="false" />
+
         </LinearLayout>
     </LinearLayout>
 </layout>
