--- a/app/src/main/res/layout/lqscan.xml
+++ b/app/src/main/res/layout/lqscan.xml
@@ -7,6 +7,24 @@
         android:orientation="vertical"
         android:padding="16dp">
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginBottom="20dp"
+            android:gravity="center"
+            android:orientation="horizontal">
+
+            <Button
+                android:id="@+id/btnconnect"
+                android:layout_width="0dp"
+                android:layout_height="30dp"
+                android:layout_weight="1"
+                android:background="#FF0000"
+                android:layout_marginEnd="8dp"
+                android:text="NVF230" />
+
+        </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
